ansible/0_Create_MultipleInstance/main.tf
# Configure the AWS Provider version
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.19"
    }
  }
}
variable "tagname" {
  default = ["DEV", "DEV", "QA"]
  type    = list(string)
}

# Configure the AWS s3 bucket
# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
  #access_key = "my-access-key"
  #secret_key = "my-secret-key"
}

resource "aws_instance" "http_server" {
  ami                    = "ami-041feb57c611358bd"
  key_name               = "default-ec2"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.http_server_sg.id]
  subnet_id              = "subnet-0417c5d404bb817ea"
  count                  = 3

  tags = {
    key_name = var.tagname[count.index]
  }
}
